--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     
 </head>
 <body>
-    <div class="game-board">heloo</div>
+    <div class="game-board">Hit F12 and run from console</div>
 </body>
 </html>
