--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tic-tac-toe</title>
     <link rel="stylesheet" href=".\data\styles.css" />
-    <script src=".\data\script.js"></script>
-    
 </head>
+
 <body>
-    <div class="game-board">Hit F12 and run from console</div>
+    <div id="board">testing</div>
 </body>
+<script src=".\data\script.js"></script>
+
 </html>
