improve styling, add custom alert, add link to gothub pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <div id="board">testing</div>
+    <div id="board" class="board">testing</div>
+    <div class="alert" id="alertMessage"></div>
+    <script src=".\data\script.js"></script>
 </body>
-<script src=".\data\script.js"></script>
 
 </html>
